template started, took out gallery, working on one page nav

--- a/index.html
+++ b/index.html
@@ -11,44 +11,70 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+ 
+
+        <a id="home" class="smooth"></a>
+        <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-                <a class="navbar-brand" href="#">Language Site</a>
-            </div>
+                    <a class="navbar-brand navbar-brand-custom" href="#home">Language Site</a>
+                </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="#">Learn<span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">Practice</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="active"><a href="#learn">Learn<span class="sr-only">(current)</span></a></li>
+                        <li><a href="#practice">Practice</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
             </div>
-            <!-- /.navbar-collapse -->
+            <!-- /.container-fluid -->
+        </nav>
+        
+   <section id="page1">
+        <div class="container-fluid">
+            <header class="page-header text-center text-uppercase header-custom">
+                <h1>Learn a new language</h1>
+                <h2>work one on one with an instructor or practice partner</h2>
+            </header>
         </div>
-        <!-- /.container-fluid -->
-    </nav>
-
+        <div class="decorative-bar"></div>
+        <div class="home-content">
+            <p class="text-center">Language Site can help you learn a language more quickly and thoroughly Learning a laungage one on one with a native speaking instructor is the fastest way to learn a new language. Fingerstache vaporware neutra austin edison bulb, food truck readymade literally affogato direct trade raw denim mumblecore VHS. Flexitarian letterpress leggings neutra tacos. Synth knausgaard viral blue bottle, wayfarers letterpress palo santo actually. Bespoke jean shorts skateboard heirloom raw denim, hella helvetica keytar. Banh mi synth artisan plaid swag vegan. Live-edge stumptown hell of pok pok sriracha, selvage VHS af you probably haven't heard of them tofu chambray mustache retro. Bicycle rights kinfolk pork belly microdosing four dollar toast PBR&B stumptown yuccie.</p>
+            <button type="button" class="btn btn-default button-custom" id="learn-more">learn more</button>
+        </div>
+    </section>
+    
     <div class="container-fluid">
-        <header class="page-header text-center text-uppercase header-custom">
-            <h1>Learn a new language</h1>
-            <h2>work one on one with an instructor or practice partner</h2>
-        </header>
+        <section class="learn no-padding gallery" id="page2">
+            <a id="learn" class="smooth"></a>
+        </section>
+        <section id="page3">
+            <a id="practice" class="smooth"></a>
+            <div>practice</div>
+        </section>
+        <section id="page4">
+            <a id="about" class="smooth"></a>
+            <div>about</div>
+        </section>
+        <section id="page5">
+            <a id="contact" class="smooth"></a>
+            <div>contact</div>
+        </section>
     </div>
-    <div class="decorative-bar"></div>
-    <div class="home-content">
-        <p class="text-center">Language Site can help you learn a language more quickly and thoroughly Learning a laungage one on one with a native speaking instructor is the fastest way to learn a new language. Fingerstache vaporware neutra austin edison bulb, food truck readymade literally affogato direct trade raw denim mumblecore VHS. Flexitarian letterpress leggings neutra tacos. Synth knausgaard viral blue bottle, wayfarers letterpress palo santo actually. Bespoke jean shorts skateboard heirloom raw denim, hella helvetica keytar. Banh mi synth artisan plaid swag vegan. Live-edge stumptown hell of pok pok sriracha, selvage VHS af you probably haven't heard of them tofu chambray mustache retro. Bicycle rights kinfolk pork belly microdosing four dollar toast PBR&B stumptown yuccie.</p>
-        <button type="button" class="btn btn-default button-custom" id="learn-more">learn more</button>
-    </div>
+
+
+
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
